# end-to-end-agent-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py
app/agent/: budgets.py  cost.py  fallback.py  hooks.py  providers.py  reasoning_events.py  tools.py  workflow.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
docs/: evals.md  failure-modes.md  observability.md  production-readiness-checklist.md
evals/: golden_dataset.jsonl  report.md  results.json  run_evals.py  scorers.py
grafana/: agent-dashboard.json
tests/: conftest.py
tests/integration/: test_api.py  test_evals_runner.py  test_fallbacks.py  test_full_run.py
tests/unit/: test_budgets.py  test_cost.py  test_fallback.py  test_hooks.py  test_models.py  test_reasoning_events.py  test_scorers.py  test_tools.py
