[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow"
version = "0.1.0"
description = "Production-grade Research Assistant Agent (OpenAI Agents SDK + Claude)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "structlog>=24.1",
  "tenacity>=8.2",
  "anthropic>=0.34",
  "openai-agents>=0.0.6 ; python_version >= '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "evals*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
